<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="be.howest.nmct.shopperio.RecipeDetailActivity">

    <item
        android:id="@+id/action_sendingredients"
        android:icon="@drawable/ic_note_add_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favourite_recipe"
        android:checked="false"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_favourite_recipe"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit_recipe"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_edit_recipe"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete_recipe"
        android:orderInCategory="100"
        android:title="@string/action_delete_recipe"
        app:showAsAction="ifRoom" />

</menu>
