<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="fill_parent">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/ShoppingLists"
            android:checked="true"
            android:icon="@drawable/shoppingcart"
            android:title="@string/lists_string" />

        <item
            android:id="@+id/Recipes"
            android:checked="false"
            android:icon="@drawable/recipes"
            android:title="@string/recipes_string" />

        <!--<item
            android:id="@+id/Account"
            android:checked="false"
            android:icon="@drawable/ic_account_circle_white_24dp"
            android:title="Profile" />-->

        <item
            android:id="@+id/logout"
            android:checked="false"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout_string" />
    </group>
</menu>