<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/AppTheme.AppBarOverlay"
        android:icon="@drawable/ic_launcher" />


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_centerInParent="true"
            >

            <ImageView
                android:layout_width="910dp"
                android:layout_height="140dp"
                android:src="@drawable/ic_launcher"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/edittext"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_account_circle_white_24dp"
                android:drawablePadding="30dp"
                android:paddingLeft="19dp"
                android:paddingRight="20dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_marginBottom="2dp"
                android:hint="Email"
                android:maxLines="1"
                android:singleLine="true"
                />


            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/edittext"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawablePadding="30dp"
                android:paddingLeft="19dp"
                android:paddingRight="20dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:hint="@string/prompt_password"
                android:maxLines="1"
                android:singleLine="true"
                />



            <TextView
                android:id="@+id/ctrlPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:maxLines="1"
                android:singleLine="true"
                android:text="Login incorrect"
                android:textColor="#FF6666"
                android:visibility="gone"
                android:textAlignment="center" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in_short"
                android:background="?attr/colorPrimary"
                android:textStyle="bold"
                android:textColor="#ffffff"/>


            <LinearLayout
                android:id="@+id/register_forgotpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:linksClickable="true"
                    android:text="@string/register_link"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
